--- a/icomet.conf
+++ b/icomet.conf
@@ -1,6 +1,6 @@
 # icomet config file
 
-pidfile = ./comet.pid
+# pidfile = ./comet.pid
 
 logger:
 	#level: debug
@@ -23,13 +23,17 @@ front:
 	listen: 0.0.0.0:8100
 	# none|token
 	auth: none
-	max_channels: 100000
-	max_subscribers_per_channel: 16
+	# max_channels: 100000
+	# max_subscribers_per_channel: 16
+	max_channels: 100
+	max_subscribers_per_channel: 10000
 	# number of messages buffered
 	channel_buffer_size: 10
 	# in seconds
-	channel_timeout: 30
+	# channel_timeout: 30
+	channel_timeout: 3600
 	# the idle time to send noop message, in seconds
-	polling_timeout: 30
+	# polling_timeout: 30
+	polling_timeout: 3600
 
 
