--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,18 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+#Visual Studio middle files
+*.ilk
+*.lastbuildstate
+*.obj
+*.pch
+*.pdb
+*.tlog
+*.log
+*.idb
+*.exe
+*.sdf
+*.opensdf
+*.ipch
+*.suo
